# bookaware

./: .gitignore  Dockerfile  README.md  config.yaml  main.py  pyproject.toml
bookaware/: main.py
